Some changes for build to work locally with JDK25 and Gradle 9.2.0.